examples/kraken-interpol/public/templates/errors/http_500.int
from errors import render
render(500, "Internal Server Error")
